# turtor

./: .gitignore  CMakeLists.txt  bochsrc  build.sh  run.sh
configs/: common.cmake  settings.cmake
libs/: asm.cmake  c_cpp.cmake  compile.cmake  disks.cmake  linker.cmake  target.cmake
src/: CMakeLists.txt
src/boot/: CMakeLists.txt  boot_1st.asm  boot_2nd.asm
src/kernel/: CMakeLists.txt  debug.c  debug.h  kernel.asm  main.cpp  memory.c  memory.h  print.c  print.h  trap.asm  trap.c  trap.h
src/kernel/core/: physic_memory.cpp  physic_memory.h  virtual_memory.cpp  virtual_memory.h
src/kernel/drivers/graphics/: vbe.asm  vbe.c  vbe.h  vesa.h
src/kernel/libs/: io.asm  io.h  lib.asm  lib.h
